--- a/ui/components/room_page.templ
+++ b/ui/components/room_page.templ
@@ -11,11 +11,9 @@ templ RoomPage(room server.Room) {
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Room Session</title>
 
-        <!-- Include Alpine.js for DaisyUI to work -->
-        <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
-
         <!-- Include DaisyUI CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/daisyui@0.5.0/dist/full.css" rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.tailwindcss.com"></script>
 
         <!-- Include HTMX -->
         <script src="https://unpkg.com/htmx.org@1.9.9/dist/htmx.js"></script>
@@ -23,7 +21,7 @@ templ RoomPage(room server.Room) {
         <!-- Include HTMX Websocket -->
         <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
     </head>
-    <body class="bg-primary text-text-secondary font-sans leading-normal tracking-normal">
+    <body class="text-text-secondary font-sans leading-normal tracking-normal">
 
     <div class="container mx-auto mt-10">
         <h1 class="text-3xl mb-6">Room Session</h1>
