feat/add displayName support for a subscriber of a room

--- a/ui/components/home_page.templ
+++ b/ui/components/home_page.templ
@@ -51,6 +51,14 @@ templ HomePage(name string) {
                     <div class="flex space-x-4">
                         <input
                             type="text"
+                            id="displayName"
+                            name="displayName"
+                            placeholder="Enter display name"
+                            class="px-4 py-2 border rounded w-64"
+                            required
+                            />
+                        <input
+                            type="text"
                             id="roomID"
                             name="roomID"
                             placeholder="Enter room ID"
