--- a/ui/components/room_page.templ
+++ b/ui/components/room_page.templ
@@ -45,8 +45,8 @@ templ RoomPage(pageData server.RoomPageData) {
               <input type="hidden" id="payload" name="payload" value="8" readonly/> 
               <button class="btn" type="submit"> 8 </button>
           </form>
+          <div id="room-count"></div>
       </div>
-
     </body>
     </html>
 }
