add shortID lib to move away from UUID, more clean up

--- a/ui/components/room_page.templ
+++ b/ui/components/room_page.templ
@@ -1,9 +1,9 @@
 package components
 
-import "estimate-ease/internal/server"
 import "fmt"
+import "estimate-ease/ui/data"
 
-templ RoomPage(pageData server.RoomPageData) {
+templ RoomPage(pageData data.RoomPageData) {
     <!DOCTYPE html>
     <html lang="en">
     <head>
