--- a/ui/components/room_page.templ
+++ b/ui/components/room_page.templ
@@ -7,6 +7,7 @@ type RoomPageData struct {
 	RoomName       string
 	DisplayName string
 	RoomID         string
+    RoomURL string
 }
 
 templ RoomPage(pageData RoomPageData) {
@@ -42,6 +43,8 @@ templ RoomPage(pageData RoomPageData) {
                         <div id="room-count"></div>
                         @showVotesBtn()
                     </div>
+                        <h4> Invite Link </h4>
+                        <a class="link link-hover"> { pageData.RoomURL } </a>
                 </div>
         </div>
     }
