--- a/ui/components/display_name_page.templ
+++ b/ui/components/display_name_page.templ
@@ -1,7 +1,13 @@
 package components
 
-templ DisplayNamePage(roomID string) {
+templ DisplayNamePage(roomID string, createdFlag bool) {
     @Base() {
+          if createdFlag {
+                    <div role="alert" class="alert alert-success">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                        <span>Room succesfully created!</span>
+                    </div>
+                }
           <div class="container mx-auto p-8 mt-8">
                 <h2 class="text-3xl font-bold mb-6">Please enter a display name:</h2>
                 <form action="/room/join/user" method="POST" class="grid grid-cols-1 md:grid-cols-4 gap-4">
