--- a/ui/components/home_page.templ
+++ b/ui/components/home_page.templ
@@ -1,6 +1,6 @@
 package components
 
-templ HomePage(numRooms string) {
+templ HomePage(stats []StatValues) {
     @Base() {
         <div class="container mx-auto p-8 mt-8">
             <!-- Create Room Form -->
@@ -46,7 +46,7 @@ templ HomePage(numRooms string) {
                         <button type="submit" class="bg-green-600 text-white px-6 py-3 rounded-md w-full md:w-auto">Join Room</button>
                     </div>
                 </form>
-                @Stats("Live Rooms", numRooms)
+                @Stats(stats)
             </div>
         </div>
     }
