--- a/ui/components/home_page.templ
+++ b/ui/components/home_page.templ
@@ -15,6 +15,16 @@ templ HomePage(stats []StatValues) {
                         class="px-5 py-3 border rounded-md text-lg"
                         required
                     />
+                    <label class="form-control w-full max-w-xs">
+                     <div class="label">
+                        <span class="label-text">Choose a vote type</span>
+                    </div>
+                    <select class="select select-primary w-full max-w-xs" name="voteType" required>
+                        <option disabled>Vote type:</option>
+                        <option>Fibonacci</option>
+                        <option>True/False</option>
+                    </select>
+                    </label>
                     <div class="md:col-span-2">
                         <button type="submit" class="bg-blue-600 text-white px-6 py-3 rounded-md w-full md:w-auto">Create Room</button>
                     </div>
